# claim_maker_experiment

./: .env  Cargo.toml
lib/: Cargo.toml
migrations/2019-10-05-191011_create_users_table/: down.sql  up.sql
migrations/2019-10-05-204436_create_identity_table/: down.sql  up.sql
migrations/2019-10-05-212621_create_phone_numbers_table/: down.sql  up.sql
migrations/2019-10-05-212649_create_claims_table/: down.sql  up.sql
migrations/2019-10-05-212658_create_documents_table/: down.sql  up.sql
migrations/2019-10-05-212710_create_addresses_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/controllers/: hello_world.rs
src/models/: model.rs
src/prelude/: db.rs  routes.rs
